--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,17 @@
     "react": "^16.9.0",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
     "react-skylight": "^0.5.1",
     "react-table": "^6.10.0",
-    "react-toastify": "^5.3.2"
+    "react-toastify": "^5.3.2",
+    "redux": "^4.0.4",
+    "semantic": "^0.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
+    "ui": "^0.2.4",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "faker": "^4.1.0"
   }
 }
