--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL93Dialect
-        show_sql: false
-        use_sql_comments: false
-        format_sql: false
+        show_sql: true
+        use_sql_comments: true
+        format_sql: true
         current_session_context_class: thread
         jdbc:
           lob:
