--- a/server/build.gradle
+++ b/server/build.gradle
@@ -58,7 +58,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-text:1.6'
 	compile 'org.jetbrains:annotations:16.0.2'
 
-	testImplementation 'com.h2database:h2'
+	implementation 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
 }
