--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "axios": "^0.19.0",
+    "jquery": "^3.4.1",
     "react": "^16.9.0",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.9.0",
@@ -17,6 +18,7 @@
     "semantic": "^0.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
+    "semantic-ui-react-input-file": "^1.0.3",
     "ui": "^0.2.4",
     "video-react": "^0.14.1"
   },
