--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,19 +1,26 @@
 server:
   port: 8080
 
-
+file:
+  upload-dir: ${HOME}/projects/stylist/photos
 
 ---
 
-logging.level:
-  root: INFO
-  org.springframework.security: ERROR
+logging.level.root: INFO
+#  org.springframework.security: ERROR
 
 spring:
   profiles.active: development
 
+  servlet.multipart:
+    enabled: true
+    file-size-threshold: 2KB
+    max-file-size: 200MB
+    max-request-size: 300MB
+
   jpa:
     generate-ddl: true
+    open-in-view: false
     hibernate:
       ddl-auto: create-drop
     properties:
@@ -26,7 +33,6 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-    open-in-view: false
 
   mail:
     test-connection: true
@@ -42,16 +48,17 @@ spring:
 
   datasource:
     initialization-mode: always
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test
-    username: test
-    password: test
 
-#    platform: postges
-#    username: stylist_admin
-#    password: 123qwe
-#    driverClassName: org.postgresql.Driver
-#    url: jdbc:postgresql://localhost:5432/stylist_db
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:~/test
+#    username: test
+#    password: test
+
+    platform: postges
+    username: stylist_admin
+    password: 123qwe
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/stylist_db
 
 
 
